Entering pairing mode when BOOT button is pressed

--- a/dyngl_bt/main/CMakeLists.txt
+++ b/dyngl_bt/main/CMakeLists.txt
@@ -1,4 +1,4 @@
-idf_component_register(SRCS "dyngl.c" "dyngl_bt.c" "dyngl_spi.c"
+idf_component_register(SRCS "dyngl.c" "dyngl_bt.c" "dyngl_spi.c" "dyngl_gpio.c"
                     INCLUDE_DIRS "."
                     REQUIRES bt esp_hid nvs_flash
                     REQUIRES esp_driver_spi esp_driver_gpio esp_timer
